Coming Soon Message added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h4>I am Ghazi Sultan</h4>
+<html>
+<head>
+<style>
+#section1 {
+    height: 90%; 
+    width:100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+</style>
+</head>
+<body>
+<div id="section1" stlye="width:100%;align:center;height:100vh;vertical-align:middle">
+<h1>Coming Soon</h1>
+</div>
+</body>
+</html>
