renamed profile pic, bio edited

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ******HEADER****** -->
     <header class="header">
         <div class="container clearfix">
-            <img class="profile-image img-fluid float-left" src="assets/images/profile.png" alt="James Lee" />
+            <img class="profile-image img-fluid float-left" src="assets/images/my_profile_pic.png" alt="Ghazi Sultan" />
             <div class="profile-content float-left">
                 <h1 class="name">Ghazi Sultan</h1>
                 <h2 class="desc">Full Stack Developer</h2>
@@ -59,7 +59,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I graduated 6 months ago with mostly the knowledge of Algorithms and Data Structures and some web development. But as of now, I have developed a fully functional Django Web Application for the London Real Estate Market. From Database Design to Deployment, I did it all. And the completion of this one project has instilled in me such confidence that I believe I can develop any web application, given the idea. Contact me if you got an Idea and I will make it a reality!</p>
+                            <p>I graduated in May, 2019 with mostly the knowledge of Algorithms and Data Structures and some web development. But as of now, I have developed a fully functional Django Web Application for the London Real Estate Market. From Database Design to Deployment, I did it all. And the completion of this one project has instilled in me such confidence that I believe I can develop any web application, given the idea. Contact me if you got an Idea and I will make it a reality!</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
