--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
 
     <!-- github calendar css -->
-    <link rel="stylesheet" href="assets/plugins/github-calendar/dist/github-calendar.css">
-    <!-- github activity css -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-    <link rel="stylesheet" href="assets/plugins/github-activity/github-activity-0.1.5.min.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+    />
 
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
@@ -59,7 +59,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I graduated in May, 2019 with mostly the knowledge of Algorithms and Data Structures and some web development. But as of now, I have developed a fully functional Django Web Application for the London Real Estate Market. From Database Design to Deployment, I did it all. And the completion of this one project has instilled in me such confidence that I believe I can develop any web application, given the idea. Contact me if you got an Idea and I will make it a reality!</p>
+                            <p>I graduated in May, 2019 with mostly the knowledge of Algorithms and Data Structures and some web development. But as of now, I have developed a fully functional Django Web Application for the London Real Estate Market. From Design to Deployment, I did it all. And completion of this one project has instilled in me such confidence that I believe I can develop any web application, given the idea. Contact me if you got an Idea and I will make it a reality!</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -83,9 +83,9 @@
                                 </div>
 
                                 <div class="desc text-left">
-                                    <p>You can promote your main project here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p>
+                                    <p>This project has been developed keeping in mind the needs of companies operating in London Real Estate Market. One of its primary goal is to track each individual lead. It is a great tool to analyse the performance of the company as a whole or an individual agent. It also provides graphical and tabular representation of the data which makes analysis of data much easier.</p>
                                 </div><!--//desc-->
-                                <a class="btn btn-cta-secondary" href="javascript:void(0)"><i class="fas fa-thumbs-up"></i> Back my project</a>
+                                <!-- <a class="btn btn-cta-secondary" href="javascript:void(0)"><i class="fas fa-thumbs-up"></i> Back my project</a> -->
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
@@ -93,31 +93,31 @@
                                 <img class="img-fluid project-image" src="assets/images/projects/project-1.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="javascript:void(0)" target="_blank">Instance - Bootstrap 4 Portfolio Theme for Aspiring Full Stack Developers</a></h3>
-                                    <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
-                                    <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                                    <h3 class="title"><a href="javascript:void(0)" target="_blank">MyDiary - Django Application with Reusable Components</a></h3>
+                                    <p class="mb-2">This is the first Django application I ever developed. It contains reusable applications like accounts, which creates and manages user accounts, and notes, which is a CRUD application to keep record of entries in the diary.</p>
+                                    <p><a class="more-link" href="https://github.com/iamghazi/diary-project" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
 
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="javascript:void(0)" target="_blank">
-                                <img class="img-fluid project-image" src="assets/images/projects/project-2.png" alt="project name" />
+                                <img class="img-fluid project-image" src="assets/images/projects/facebook-google.jpg" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="javascript:void(0)" target="_blank">DevStudio - Bootstrap 4 Theme for WebDev Agencies and Freelance Developers</a></h3>
+                                    <h3 class="title"><a href="javascript:void(0)" target="_blank">AUTOMATION: FACEBOOK-GOOGLE SPREADSHEET Integration</a></h3>
                                     <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
-                                    <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                                    <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Watch Demo Video</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
 
                              <div class="item row">
                                 <a class="col-md-4 col-12" href="javascript:void(0)" target="_blank">
-                                <img class="img-fluid project-image" src="assets/images/projects/project-3.png" alt="project name" />
+                                <img class="img-fluid project-image" src="assets/images/projects/xero-spreadsheet.jpg" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="javascript:void(0)" target="_blank">Startup Kit - Bootstrap 4 Theme for SaaS Startups</a></h3>
+                                    <h3 class="title"><a href="javascript:void(0)" target="_blank">AUTOMATION: Two way synced XERO-GOOGLE SPREADSHEET Integration</a></h3>
                                     <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
-                                    <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                                    <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Watch Demo Video</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
 
@@ -202,11 +202,6 @@
 
                         </div><!--//github-graph-->
 
-                        <p>You can also embed your GitHub activities using Casey Scarborough's <a href="https://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget.
-                        <!--//Usage: https://caseyscarborough.com/projects/github-activity/ -->
-                        <div id="ghfeed" class="ghfeed">
-                        </div><!--//ghfeed-->
-
                     </div><!--//secton-inner-->
                 </section><!--//section-->
             </div><!--//primary-->
@@ -265,7 +260,7 @@
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
 
-                                <p><a class="more-link" href="#"><i class="fas fa-external-link-alt"></i>More on Coderwall</a></p>
+                                <p><a class="more-link" href="https://www.linkedin.com/in/ghazi-sultan-606630b6/"><i class="fas fa-external-link-alt"></i>More on LinkedIn</a></p>
                             </div>
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -277,12 +272,12 @@
                         <div class="content">
                             <div class="item">
                                 <blockquote class="quote">
-                                    <p><i class="fas fa-quote-left"></i>James is an excellent software engineer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
+                                    <p><i class="fas fa-quote-left"></i>Ghazi is an excellent software engineer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
                                 </blockquote>
-                                <p class="source"><span class="name">Tim Adams</span><br /><span class="title">Curabitur commodo</span></p>
+                                <p class="source"><span class="name">Shahbaz Haidar</span><br /><span class="title">Founder, IdeaRise.co</span></p>
                             </div><!--//item-->
 
-                            <p><a class="more-link" href="#"><i class="fas fa-external-link-alt"></i>More on Linkedin</a></p>
+                            <p><a class="more-link" href="https://www.linkedin.com/in/ghazi-sultan-606630b6/"><i class="fas fa-external-link-alt"></i>More on LinkedIn</a></p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -306,50 +301,24 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li class="item">
-                                    <span class="title"><strong>Urdu/Hindi:</strong></span>
-                                    <span class="level">Native Speaker <br class="visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> </span>
-                                </li><!--//item-->
-                                <li class="item">
                                     <span class="title"><strong>English:</strong></span>
                                     <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star-half"></i></span>
+                                </li><!--//item-->
+                                <li class="item">
+                                    <span class="title"><strong>Urdu/Hindi:</strong></span>
+                                    <span class="level">Native Speaker <br class="visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> </span>
                                 </li><!--//item-->
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
 
-                <aside class="blog aside section">
+                <!-- <aside class="blog aside section">
                     <div class="section-inner">
                         <h2 class="heading">Latest Blog Posts</h2>
                         <p>You can use Sascha Depold's <a href="https://github.com/sdepold/jquery-rss" target="_blank">jQuery RSS plugin</a> to pull in your blog post feeds.</p>
                         <div id="rss-feeds" class="content">
 
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
-
-                <!-- <aside class="list music aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Favourite coding music</h2>
-                        <div class="content">
-                            <ul class="list-unstyled">
-                                <li><i class="fas fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fas fa-headphones"></i> <a href="#">Ut sollicitudin in mauris non auctor</a></li>
-                                <li><i class="fas fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fas fa-headphones"></i> <a href="#">Duis et felis bibendum</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </aside> -->
-
-                <!-- <aside class="list conferences aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Conferences</h2>
-                        <div class="content">
-                            <ul class="list-unstyled">
-                                <li><i class="far fa-calendar-alt"></i> <a href="#" target="_blank">WWDC 2020</a> (San Francisco)</li>
-                                <li><i class="far fa-calendar-alt"></i> <a href="#">Hive</a> (Seattle)</li>
-                            </ul>
                         </div>
                     </div>
                 </aside> -->
@@ -364,16 +333,14 @@
                                 <li><a href="https://jquery.com/" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery</a></li>
                                 <li><a href="https://github.com/IonicaBizau/github-calendar" target="_blank"><i class="fas fa-external-link-alt"></i>GitHub Calendar Plugin</a></li>
 
-                                <li><a href="https://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fas fa-external-link-alt"></i>GitHub Activity Stream</a></li>
+                                <!-- <li><a href="https://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fas fa-external-link-alt"></i>GitHub Activity Stream</a></li>
 
-                                <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery RSS</a></li>
-
-                                <li>Profile image: <a href="https://www.flickr.com/photos/dotbenjamin/2577394151" target="_blank">Ben Smith</a></li>
+                                <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery RSS</a></li> -->
                             </ul>
 
-                            <hr/>
+                            <!-- <hr/> -->
 
-                             <p class="pt-2">This Bootstrap 4 portfolio template is handcrafted by UX designer <a href="https://twitter.com/3rdwave_themes" target="_blank">Xiaoying Riley</a> at <a href="https://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a> for developers and is <strong>FREE</strong> as long as you keep the footer attribution link.</p>
+                             <!-- <p class="pt-2">This Bootstrap 4 portfolio template is handcrafted by UX designer <a href="https://twitter.com/3rdwave_themes" target="_blank">Xiaoying Riley</a> at <a href="https://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a> for developers and is <strong>FREE</strong> as long as you keep the footer attribution link.</p>
                              <p>If you’d like to <strong>use this template without the attribution link</strong>, you can <a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap-portfolio-theme-for-web-developers/" target="_blank">buy the commercial license</a>.</p>
 
                              <a class="btn btn-cta-primary btn-download" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/free-bootstrap-portfolio-theme-for-web-developers/" target="_blank"><i class="fas fa-download"></i> I want to download</a>
@@ -382,7 +349,7 @@
                             <p>Check out our <a href="https://themes.3rdwavemedia.com/bootstrap-templates/free/">collection of free themes and templates.</a></p>
                             <p>Follow <a href="https://twitter.com/3rdwave_themes" target="_blank">Xiaoying</a> on twitter so you don't miss any future freebies!</p>
 
-                            <a class="btn btn-cta-secondary btn-follow" href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fab fa-twitter"></i> Follow on twitter</a>
+                            <a class="btn btn-cta-secondary btn-follow" href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fab fa-twitter"></i> Follow on twitter</a> -->
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -396,7 +363,7 @@
     <footer class="footer">
         <div class="container text-center">
                 <!--/* This template is free as long as you keep the attribution link below. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-                <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+                <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="javascript:void(0)" target="_blank">Xiaoying Riley</a> for developers</small>
         </div><!--//container-->
     </footer><!--//footer-->
 
@@ -406,10 +373,10 @@
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
     <!-- github calendar plugin -->
-    <script type="text/javascript" src="assets/plugins/github-calendar/dist/github-calendar.min.js"></script>
-    <!-- github activity plugin -->
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/github-activity/github-activity-0.1.5.min.js"></script>
+    <!-- Include the library. -->
+    <script
+      src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
+    </script>
     <!-- custom js -->
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
