right-quote icon added in reco

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                 <blockquote class="quote">
                                     <p><i class="fas fa-quote-left"></i>Ghazi is just a champ. He joined our team as a fresher, just out of college and within few months, he created a Product - single handedly- from scratch and made it live. He was solely responsible for designing and coding front end, back end and managing dev-ops. The Product he created is being used by Real estate agents in England.
                                     <br />
-                                    He is very sincere and can be trusted on anything and everything, both personally and professionally. His passion to learn new technologies, and explore new ideas, will definitely take him a long way in his career.</p>
+                                    He is very sincere and can be trusted on anything and everything, both personally and professionally. His passion to learn new technologies, and explore new ideas, will definitely take him a long way in his career.<i class="fas fa-quote-right"></i></p>
                                 </blockquote>
                                 <p class="source"><span class="name">Shahbaz Haidar</span><br /><span class="title">Founder, IdeaRise.co</span></p>
                             </div><!--//item-->
