added details on agentsdash.com

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 
                             <div class="item featured text-center">
                                 <h3 class="title"><a href="https://www.agentsdash.com" target="_blank">AgentsDash.com</a></h3>
-                                <p class="summary">The Best Tool for Data Management and Analytics for Realestate Agents</p>
+                                <p class="summary">Realestate Agents Performance Dashboard</p>
                                 <div class="featured-image has-ribbon">
                                     <a href="javascript:void(0)" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/project-featured.jpg" alt="project name" />
+                                    <img class="img-fluid project-image" src="assets/images/projects/agentsdash.png" alt="AgentsDash" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
@@ -83,9 +83,9 @@
                                 </div>
 
                                 <div class="desc text-left">
-                                    <p>This project has been developed keeping in mind the needs of companies operating in London Real Estate Market. One of its primary goal is to track each individual lead. It is a great tool to analyse the performance of the company as a whole or an individual agent. It also provides graphical and tabular representation of the data which makes analysis of data much easier.</p>
+                                    <p>I developed this web application from scratch using <a href="https://www.djangoproject.com/" target="_blank">Django</a> Framework. I used <a href="https://jquery.com/" target="_blank">Jquery</a>, a javascript library for DOM manipulation and asynchronous API calls. I was solely responsible for all aspects of this project i.e. Design, Development and Deployment. I used <a href="https://git-scm.com/" target="_blank">Git</a> as version control tool throughout. I used dbsqlite for development and MySQL database for production. I deployed it on <a href="https://www.digitalocean.com/" target="_blank">DigitalOcean</a> with uwsgi and nginx. For tabular representation and efficient analysis of data, I customised <a href="https://datatables.net/" target="_blank">DataTables</a>. I also customised <a href="https://www.highcharts.com/" target="_blank">HightCharts</a>, a javascript graph library for graphical representation and prediction of future sales.</p>
                                 </div><!--//desc-->
-                                <!-- <a class="btn btn-cta-secondary" href="javascript:void(0)"><i class="fas fa-thumbs-up"></i> Back my project</a> -->
+                                <a class="btn btn-cta-secondary" href="https://agentsdash.com" target="_blank"><i class="fas fa-external-link-alt"></i> Visit Website</a>
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
@@ -177,16 +177,16 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>
+                                <h3 class="title">Full Stack Developer - <span class="place"><a href="#">IdeaRise.co</a></span> <span class="year">(June, 2019 - Present)</span></h3>
                                 <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
+                                <h3 class="title">Software Engineer Intern- <span class="place"><a href="#">Power2SME Pvt. Ltd.</a></span> <span class="year">(May, 2018 - July, 2018)</span></h3>
                                 <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
+                                <h3 class="title">Full Stack Developer Intern - <span class="place"><a href="#">Mrittica Infotech Pvt. Ltd.</a></span> <span class="year">(May, 2017 - July, 2017)</span></h3>
                                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
                             </div><!--//item-->
 
@@ -273,7 +273,7 @@
                                 <blockquote class="quote">
                                     <p><i class="fas fa-quote-left"></i>Ghazi is just a champ. He joined our team as a fresher, just out of college and within few months, he created a Product - single handedly- from scratch and made it live. He was solely responsible for designing and coding front end, back end and managing dev-ops. The Product he created is being used by Real estate agents in England.
                                     <br />
-                                    He is very sincere and can be trusted on anything and everything, both personally and professionally. His passion to learn new technologies, and explore new ideas, will definitely take him a long way in his career.<i class="fas fa-quote-right"></i></p>
+                                    He is very sincere and can be trusted on anything and everything, both personally and professionally. His passion to learn new technologies, and explore new ideas, will definitely take him a long way in his career. <i class="fas fa-quote-right"></i></p>
                                 </blockquote>
                                 <p class="source"><span class="name">Shahbaz Haidar</span><br /><span class="title">Founder, IdeaRise.co</span></p>
                             </div><!--//item-->
@@ -303,7 +303,7 @@
                             <ul class="list-unstyled">
                                 <li class="item">
                                     <span class="title"><strong>English:</strong></span>
-                                    <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star-half"></i></span>
+                                    <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></span>
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><strong>Urdu/Hindi:</strong></span>
