More projects and work experiences added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bootstrap 4 Portfolio/Resume Theme for Developers">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
     <link rel="shortcut icon" href="favicon.ico">
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
@@ -123,12 +121,12 @@
 
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="javascript:void(0)" target="_blank">
-                                <img class="img-fluid project-image" src="assets/images/projects/project-4.png" alt="project name" />
+                                <img class="img-fluid project-image" src="assets/images/projects/spreadsheet-db.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="javascript:void(0)" target="_blank">Nova Pro - Bootstrap 4 Theme for Mobile Startups</a></h3>
+                                    <h3 class="title"><a href="javascript:void(0)" target="_blank">Spreadsheet Admin Dashboard - Clean And Error Free Data Management Using Dashboard</a></h3>
                                     <p class="mb-2">You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus.</p>
-                                    <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                                    <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Watch Demo Video</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
                             <div class="item row">
@@ -181,12 +179,17 @@
                                 <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer Intern- <span class="place"><a href="#">Power2SME Pvt. Ltd.</a></span> <span class="year">(May, 2018 - July, 2018)</span></h3>
+                                <h3 class="title">Software Engineering Intern- <span class="place"><a href="https://www.power2sme.com/">Power2SME Pvt. Ltd.</a></span> <span class="year">(May, 2018 - July, 2018)</span></h3>
                                 <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
                             </div><!--//item-->
 
                             <div class="item">
                                 <h3 class="title">Full Stack Developer Intern - <span class="place"><a href="#">Mrittica Infotech Pvt. Ltd.</a></span> <span class="year">(May, 2017 - July, 2017)</span></h3>
+                                <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                            </div><!--//item-->
+
+                            <div class="item">
+                                <h3 class="title">Web Development Head - <span class="place"><a href="http://www.prithvi-geo.in/prithvi20/">Prithvi, IIT Kharagpur</a></span> <span class="year">(Oct, 2015 - Feb, 2016)</span></h3>
                                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
                             </div><!--//item-->
 
@@ -333,7 +336,7 @@
                                 <li><a href="https://fortawesome.github.io/Font-Awesome/" target="_blank"><i class="fas fa-external-link-alt"></i>FontAwesome</a></li>
                                 <li><a href="https://jquery.com/" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery</a></li>
                                 <li><a href="https://github.com/IonicaBizau/github-calendar" target="_blank"><i class="fas fa-external-link-alt"></i>GitHub Calendar Plugin</a></li>
-
+                                <li><a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market" target="_blank"><i class="fas fa-external-link-alt"></i>Vectors Market Flaticons</a></li>
                                 <!-- <li><a href="https://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fas fa-external-link-alt"></i>GitHub Activity Stream</a></li>
 
                                 <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery RSS</a></li> -->
