Add work experience details
- Add more skills

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico">
+    <!-- <link rel="shortcut icon" href="favicon.ico"> -->
 
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -175,22 +175,22 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Full Stack Developer - <span class="place"><a href="#">IdeaRise.co</a></span> <span class="year">(June, 2019 - Present)</span></h3>
-                                <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
+                                <h3 class="title">Full Stack Developer - <span class="place"><a href="http://idearise.co">IdeaRise.co</a></span> <span class="year">(June, 2019 - Present)</span></h3>
+                                <p>Learnt Django, Jquery, Google App Script and DevOps. Designed, Developed and Deployed a SaaS application from scratch. Wrote scripts to fetch invoices from XERO and marketing data from facebook into Google Spreadsheet. Using Google App Script, developed a web-based tabular representation of spreadsheets and features to add and edit data in spreadsheet from the website.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineering Intern- <span class="place"><a href="https://www.power2sme.com/">Power2SME Pvt. Ltd.</a></span> <span class="year">(May, 2018 - July, 2018)</span></h3>
-                                <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
+                                <p>Learnt Java, Spring Framework, Git and other tools used throughtout the Company Architecture. Hands on experience with Eclipse, Tomcat Server, etc. Developed an API to automate Company-Client interaction through whatsapp. Learnt and understood the mechanism of different parts of the company like Product, Marketing, Sales, Finance and Human Resource</p>
                             </div><!--//item-->
 
                             <div class="item">
                                 <h3 class="title">Full Stack Developer Intern - <span class="place"><a href="#">Mrittica Infotech Pvt. Ltd.</a></span> <span class="year">(May, 2017 - July, 2017)</span></h3>
-                                <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                                <p>Learnt about CGI framework, Python and Javascript. Developed backend of an e-commerce application and an admin dashboard for database management.</p>
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Web Development Head - <span class="place"><a href="http://www.prithvi-geo.in/prithvi20/">Prithvi, IIT Kharagpur</a></span> <span class="year">(Oct, 2015 - Feb, 2016)</span></h3>
-                                <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                                <h3 class="title">Web Team Lead - <span class="place"><a href="http://www.prithvi-geo.in/prithvi20/">Prithvi, IIT Kharagpur</a></span> <span class="year">(Oct, 2015 - Feb, 2016)</span></h3>
+                                <p>Managed a team of 3, responsible for development of Prithvi-2016 website. Developed backend of Prithvi-2016 website and developed frontend of Prithvi-2015 website.</p>
                             </div><!--//item-->
 
                         </div><!--//content-->
@@ -247,7 +247,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">HTML5, CSS3, SASS &amp; LESS<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <h3 class="level-title">HTML5, CSS3 &amp; Bootstrap<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>
@@ -255,7 +255,31 @@
                                 </div><!--//item-->
 
                                 <div class="item">
+                                    <h3 class="level-title">Software as a Service (SaaS)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Pro</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="85%">
+                                        </div>
+                                    </div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
                                     <h3 class="level-title">Google App Script<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Pro</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="85%">
+                                        </div>
+                                    </div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Git<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Pro</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="85%">
+                                        </div>
+                                    </div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Algorithms &amp; Data Structures<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Pro</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>
