Fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -178,21 +178,21 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Full Stack Developer - <span class="place"><a href="http://idearise.co">IdeaRise.co</a></span> <span class="year">(June, 2019 - Present)</span></h3>
+                                <h3 class="title">Full-Stack Developer - <span class="place"><a href="http://idearise.co">IdeaRise.co</a></span> <span class="year">(June, 2019 - Present)</span></h3>
                                 <p>Learnt Django, Jquery, Google App Script and DevOps. Designed, Developed and Deployed a SaaS application from scratch. Wrote scripts to fetch invoices from XERO and marketing data from facebook into Google Spreadsheet. Using Google App Script, developed a web-based tabular display of spreadsheet data with features to add and edit data in spreadsheet from the website.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineering Intern- <span class="place"><a href="https://www.power2sme.com/">Power2SME Pvt. Ltd.</a></span> <span class="year">(May, 2018 - July, 2018)</span></h3>
+                                <h3 class="title">Software Development Intern- <span class="place"><a href="https://www.power2sme.com/">Power2SME Pvt. Ltd.</a></span> <span class="year">(May, 2018 - July, 2018)</span></h3>
                                 <p>Learnt Java, Spring Framework, Git and other tools used throughtout the Company Architecture. Hands on experience with Eclipse, Tomcat Server, etc. Developed an API to automate Company-Client interaction through whatsapp. Learnt and understood the mechanism of different parts of the company like Product, Marketing, Sales, Finance and Human Resource</p>
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Full Stack Developer Intern - <span class="place"><a href="#">Mrittica Infotech Pvt. Ltd.</a></span> <span class="year">(May, 2017 - July, 2017)</span></h3>
+                                <h3 class="title">Full-Stack Development Intern - <span class="place"><a href="#">Mrittica Infotech Pvt. Ltd.</a></span> <span class="year">(May, 2017 - July, 2017)</span></h3>
                                 <p>Learnt about CGI framework, Python and Javascript. Developed backend of an e-commerce application and an admin dashboard for database management.</p>
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Web Team Lead - <span class="place"><a href="http://www.prithvi-geo.in/prithvi20/">Prithvi, IIT Kharagpur</a></span> <span class="year">(Oct, 2015 - Feb, 2016)</span></h3>
+                                <h3 class="title">Web-Team Lead - <span class="place"><a href="http://www.prithvi-geo.in/prithvi20/">Prithvi, IIT Kharagpur</a></span> <span class="year">(Oct, 2015 - Feb, 2016)</span></h3>
                                 <p>Managed a team of 3, responsible for development of Prithvi-2016 website. Developed backend of Prithvi-2016 website and developed frontend of Prithvi-2015 website.</p>
                             </div><!--//item-->
 
@@ -364,9 +364,9 @@
                                 <li><a href="https://jquery.com/" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery</a></li>
                                 <li><a href="https://github.com/IonicaBizau/github-calendar" target="_blank"><i class="fas fa-external-link-alt"></i>GitHub Calendar Plugin</a></li>
                                 <li><a href="https://www.flaticon.com/authors/vectors-market" title="Vectors Market" target="_blank"><i class="fas fa-external-link-alt"></i>Vectors Market Flaticons</a></li>
-                                <!-- <li><a href="https://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fas fa-external-link-alt"></i>GitHub Activity Stream</a></li>
+                                <li><a href="https://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fas fa-external-link-alt"></i>GitHub Activity Stream</a></li>
 
-                                <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery RSS</a></li> -->
+                                <!-- <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fas fa-external-link-alt"></i>jQuery RSS</a></li> -->
                             </ul>
 
                             <!-- <hr/> -->
