add custom-data-table project details

--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
                                 <img class="img-fluid project-image" src="assets/images/projects/mydiary.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="javascript:void(0)">MyDiary - Django Application with Reusable Components</a></h3>
-                                    <p class="mb-2">This is the first Django application I ever developed. It contains reusable applications like accounts, which creates and manages user accounts, and notes, which is a CRUD application to keep record of entries in the diary.</p>
-                                    <p><a class="more-link" href="https://github.com/iamghazi/diary-project" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
-                                </div><!--//desc-->
-                            </div><!--//item-->
+                                    <h3 class="title"><a href="javascript:void(0)">Beautiful Customised Data Table</a><span class="badge badge-theme">Free</span></h3>
+                                    <p class="mb-2">For a newbie, it takes a lot of time to wrap their head around various features of the data table. So, I created a customised data table which can be directly integrated into any project.</p>
+                                    <p><a class="more-link" href="https://github.com/iamghazi/custom-data-table" target="_blank"><i class="fas fa-external-link-alt"></i>Download</a></p>
+                                </div>
+                            </div>
+                            <!--//item-->
 
                             <div class="item row">
                                <a class="col-md-4 col-12" href="javascript:void(0)">
@@ -161,11 +162,11 @@
                                 <!-- <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p> -->
                             </div>
 
-                            <!-- <div class="item">
-                                <h3 class="title"><a href="javascript:void(0)" target="_blank">Nova - Free App Landing Page Template for App Developers</a> <span class="badge badge-theme">Free</span></h3>
-                                <p class="summary">Provide a brief description of your project. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel purus enim. Etiam tortor felis, fermentum ac ultrices sed.</p>
-                                <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
-                            </div> -->
+                            <div class="item">
+                                <h3 class="title"><a href="javascript:void(0)" target="_blank">MyDiary - Django Application with Reusable Components</a> <span class="badge badge-theme">Free</span></h3>
+                                <p class="summary">This is the first Django application I ever developed. It supports signup, login, email confirmation and CRUD operations on Diary Entries.</p>
+                                <p><a class="more-link" href="https://github.com/iamghazi/diary-project" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p>
+                            </div>
 
                             <!-- <a class="btn btn-cta-secondary" href="#">More on LinkedIn <i class="fas fa-chevron-right"></i></a> -->
 
