add data table project image

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="javascript:void(0)">
-                                <img class="img-fluid project-image" src="assets/images/projects/mydiary.png" alt="project name" />
+                                <img class="img-fluid project-image" src="assets/images/projects/custom-data-table.png" alt="project name" height="105" width="203" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="javascript:void(0)">Beautiful Customised Data Table</a><span class="badge badge-theme">Free</span></h3>
+                                    <h3 class="title"><a href="javascript:void(0)">Beautiful Customised Data Table</a> <span class="badge badge-theme">Free</span></h3>
                                     <p class="mb-2">For a newbie, it takes a lot of time to wrap their head around various features of the data table. So, I created a customised data table which can be directly integrated into any project.</p>
                                     <p><a class="more-link" href="https://github.com/iamghazi/custom-data-table" target="_blank"><i class="fas fa-external-link-alt"></i>Download</a></p>
                                 </div>
