improve project descriptions

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title"><a href="javascript:void(0)">Beautiful Customised Data Table</a> <span class="badge badge-theme">Free</span></h3>
-                                    <p class="mb-2">For a newbie, it takes a lot of time to wrap their head around various features of the data table. So, I created a customised data table which can be directly integrated into any project.</p>
+                                    <p class="mb-2">For a newbie, it takes a lot of time to wrap their head around various features of the data table. So, I created a customised data table with features like <i>search</i>, <i>category filter</i> and <i>column selecter</i> which can be easily integrated into any project.</p>
                                     <p><a class="more-link" href="https://github.com/iamghazi/custom-data-table" target="_blank"><i class="fas fa-external-link-alt"></i>Download</a></p>
                                 </div>
                             </div>
@@ -158,7 +158,7 @@
 
                             <div class="item">
                                 <h3 class="title"><a href="javascript:void(0)">E-Commerce Admin Panel - Easy Database Management</a> </h3>
-                                <p class="summary">Developed using CGI framework in Python. CRUD functions to update product inventory.</p>
+                                <p class="summary">Developed using CGI framework in Python. Supports CRUD operations on product inventory.</p>
                                 <!-- <p><a class="more-link" href="javascript:void(0)" target="_blank"><i class="fas fa-external-link-alt"></i>Download Now</a></p> -->
                             </div>
 
