improve about me

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I graduated in May, 2019 with mostly the knowledge of Algorithms and Data Structures and some web development. But as of now, I have developed a fully functional Django Web Application for the UK Real Estate Market. From Design to Deployment, I did it all. And completion of this one project has instilled in me such confidence that I believe I can develop any web application, given the idea. Contact me if you got an Idea and I will make it a reality!</p>
+                            <p>I graduated in May 2019 from IIT Kharagpur with mostly the knowledge of Algorithms, Data Structures and web development. Fast forward to December 2019 and I have developed a fully functional Django Web Application for the UK Real Estate Market, all by myself, from Designing to Deployment. Now I have strong confidence in my abilities that given the idea, I can develop any web application whatsoever. If you've got an idea, contact me and watch it turning it into reality.</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
