--- a/index.html
+++ b/index.html
@@ -235,58 +235,58 @@
 
                                 <div class="item">
                                     <h3 class="level-title">Python &amp; Django<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Expert"><i class="fas fa-info-circle"></i>Expert</span></h3>
-                                    <div class="level-bar">
+                                    <!-- <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>
-                                    </div><!--//level-bar-->
+                                    </div> -->
                                 </div><!--//item-->
 
                                 <div class="item">
                                     <h3 class="level-title">Javascript &amp; jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Expert"><i class="fas fa-info-circle"></i>Expert</span></h3>
-                                    <div class="level-bar">
+                                    <!-- <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>
-                                    </div><!--//level-bar-->
+                                    </div> -->
                                 </div><!--//item-->
 
                                 <div class="item">
                                     <h3 class="level-title">HTML5, CSS3 &amp; Bootstrap<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Expert"><i class="fas fa-info-circle"></i>Expert</span></h3>
-                                    <div class="level-bar">
+                                    <!-- <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>
-                                    </div><!--//level-bar-->
+                                    </div> -->
                                 </div><!--//item-->
 
                                 <div class="item">
                                     <h3 class="level-title">Software as a Service (SaaS)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Pro"><i class="fas fa-info-circle"></i>Pro</span></h3>
-                                    <div class="level-bar">
+                                    <!-- <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>
-                                    </div><!--//level-bar-->
+                                    </div> -->
                                 </div><!--//item-->
 
                                 <div class="item">
                                     <h3 class="level-title">Google App Script<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Pro"><i class="fas fa-info-circle"></i>Pro</span></h3>
-                                    <div class="level-bar">
+                                    <!-- <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>
-                                    </div><!--//level-bar-->
+                                    </div> -->
                                 </div><!--//item-->
 
                                 <div class="item">
                                     <h3 class="level-title">Git &amp; Github<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Pro"><i class="fas fa-info-circle"></i>Pro</span></h3>
-                                    <div class="level-bar">
+                                    <!-- <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>
-                                    </div><!--//level-bar-->
+                                    </div> -->
                                 </div><!--//item-->
 
                                 <div class="item">
                                     <h3 class="level-title">Algorithms &amp; Data Structures<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Pro"><i class="fas fa-info-circle"></i>Pro</span></h3>
-                                    <div class="level-bar">
+                                    <!-- <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>
-                                    </div><!--//level-bar-->
+                                    </div> -->
                                 </div><!--//item-->
 
                                 <p><a class="more-link" href="https://www.linkedin.com/in/ghazi-sultan-606630b6/detail/skills/" target="_blank"><i class="fas fa-external-link-alt"></i>More on LinkedIn</a></p>
